2015-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* gnulib: Add stdarg module, to try to fix compilations in C89 
	mode due to lack of va_copy.
	* README-hacking: Add note how to ignore files in SVN.

2015-06-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Timeout-test.inc: Also check that "time -t 0" produces 
	no output.  (Attempt at stopping failures under OpenBSD 5.5.)

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac (AC_CHECK_HEADERS): Check for stropts.h.
	* info/pseudotty.c [HAVE_STROPTS_H]: Perform STREAMS ioctl's on 
	slave device, as recommended in the GNU C Library Reference 
	Manual.  (Attempt at stopping hang of test replace-viewed.sh 
	under Solaris 10.)

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/c-u-m-x-scroll-forward: Synch with controlled program 
	before sending in typed input.  (Attempt at fixing test failures 
	under CentOS.)

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/index-apropos.sh: Don't send C-g to controlled program.

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/replace-viewed.sh: Use rm -f instead of rm.

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (forget_info_file): Function replaced.  Don't 
	free the file buffer because it could still be referenced in a 
	displayed node.
	* info/Makefile.am (XFAIL_TESTS): Remove replace-viewed.sh.
	* info/nodes.h (N_Gone): New symbol.

2015-06-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/replaced-viewed.sh: New test.  (Bug reported by Benno 
	Schulenberg).
	* info/Makefile.am (TESTS, XFAIL_TESTS): Add it.

2015-06-07  Karl Berry  <karl@freefriends.org>

	* Pretest 5.9.93.

2015-06-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Timeout-test.inc: Check for "read -t" slightly 
	differently.

2015-06-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc,
	* info/t/Init-inter.inc: Check if running the test turned off 